refactor: move all endpoints from urlencoded to json
