# api/resource/auth/validators.go
@@ -1,14 +1,14 @@
 package auth
 
-type AuthenticateQueryParams struct {
+type AuthenticateBodyParams struct {
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required,min=8,max=20,hasLowercase,hasUppercase,hasDigit,hasSpecialCharacter"`
 }
 
-type RefreshTokenQueryParams struct {
+type RefreshTokenBodyParams struct {
 	RefreshToken string `json:"refresh_token" validate:"required,jwt"`
 }
 
-type PutPasswordQueryParams struct {
+type PutPasswordBodyParams struct {
 	Password string `json:"password" validate:"required,min=8,max=20,hasLowercase,hasUppercase,hasDigit,hasSpecialCharacter"`
 }
