# api/resource/event/validators.go
@@ -8,7 +8,7 @@ type EventPathParams struct {
 	EventID string `json:"event_id" validate:"required,uuid"`
 }
 
-type EventQueryParams struct {
+type EventBodyParams struct {
 	Title     string `json:"title" validate:"required"`
 	Timezone  string `json:"timezone" validate:"required,timezone"`
 	Repeated  string `json:"repeated" validate:"required,oneof=never daily weekly monthly yearly"`
@@ -16,7 +16,7 @@ type EventQueryParams struct {
 	EndTime   string `json:"end_time" validate:"required,datetime=2006-01-02T15:04:05Z"`
 }
 
-type GetUserEventsQueryParams struct {
+type GetUserEventsBodyParams struct {
 	StartDay string `json:"start_day" validate:"required,datetime=2006-01-02"`
 	EndDay   string `json:"end_day" validate:"required,datetime=2006-01-02"`
 }
